--- a/views/materialcount/materialcountscripts.ejs
+++ b/views/materialcount/materialcountscripts.ejs
@@ -388,36 +388,9 @@
             })
         });
 
-        function filterTableRows() {
-            const searchQuery = $('#search-input').val().trim().toLowerCase();
-            let foundMatches = false;
-
-            $('#no-match-row').remove();
-
-            $('#purchaseorder-dataTable tbody tr').each(function () {
-                const rowData = $(this).text().toLowerCase();
-                if (rowData.includes(searchQuery)) {
-                    $(this).show();
-                    foundMatches = true;
-                } else {
-                    $(this).hide();
-                }
-            });
-
-            if (!foundMatches) {
-                const noMatchRow = $('<tr>').append(
-                    $('<td>', {
-                        colspan: 9,
-                        class: 'text-center',
-                        text: 'No Data Matched'
-                    })
-                );
-                $('#purchaseorder-dataTable tbody').append(noMatchRow);
-                noMatchRow.attr('id', 'no-match-row');
-            }
-        }
-
-        $('#search-input').on('input', filterTableRows);
+        $("#search-input").on("input", function () {
+            filterTableRows("#materialcount-dataTable", 8, "#search-input");
+        });
 
         $('#convertopdf').on('click', function () {
             $.ajax({
