--- a/views/production/productionscripts.ejs
+++ b/views/production/productionscripts.ejs
@@ -602,36 +602,9 @@
             })
         });
     
-        function filterTableRows() {
-            const searchQuery = $('#search-input').val().trim().toLowerCase();
-            let foundMatches = false;
-    
-            $('#no-match-row').remove();
-    
-            $('#employees-dataTable tbody tr').each(function() {
-                const rowData = $(this).text().toLowerCase();
-                if (rowData.includes(searchQuery)) {
-                    $(this).show();
-                    foundMatches = true;
-                } else {
-                    $(this).hide();
-                }
-            });
-    
-            if (!foundMatches) {
-                const noMatchRow = $('<tr>').append(
-                    $('<td>', {
-                        colspan: 9,
-                        class: 'text-center',
-                        text: 'No Data Matched'
-                    })
-                );
-                $('#employees-dataTable tbody').append(noMatchRow);
-                noMatchRow.attr('id', 'no-match-row');
-            }
-        }
-    
-        $('#search-input').on('input', filterTableRows);
+        $("#search-input").on("input", function () {
+            filterTableRows("#production-datatable", 11, "#search-input");
+        });
 
         var startDateInput = document.getElementById('startdate');
         var endDateInput = document.getElementById('enddate');
