--- a/views/productionmaterials/productionmaterials.ejs
+++ b/views/productionmaterials/productionmaterials.ejs
@@ -29,29 +29,31 @@
                                     class="form-control" placeholder="Enter New Material Name" aria-label="fullname"
                                     aria-describedby="basic-addon1">
                             </div>
-                            <div class="col-md-6">
-                                <label class="form-label">Description</label>
-                                <input autocomplete="off" id="descriptionmodal" name="descriptionmodal" type="text"
-                                    class="form-control" placeholder="Enter New Description" aria-label="fullname"
-                                    aria-describedby="basic-addon1">
-                            </div>
-                        </div>
-                        <div class="row mb-2">
                             <div class="col-md-6 mb-2">
                                 <label class="form-label">Vendor ID</label>
                                 <select class="form-control text-center" name="vendoridmodal" id="vendoridmodal">
                                     <option value="">-- Select Vendor --</option>
                                 </select>
                             </div>
+                            
                         </div>
                         <div class="row mb-2 justify-content-center">
                             <div class="col-md-6">
                                 <label class="form-label">Price</label>
                                 <input autocomplete="off" id="pricemodal" name="pricemodal" type="text"
                                     class="form-control" placeholder="Enter New Price" aria-label="fullname"
-                                    aria-describedby="basic-addon1">
+                                    aria-describedby="basic-addon1" oninput="formatPrice(event, this)">
                             </div>
                         </div>
+                        <div class="row mb-2 justify-content-center">
+                            <div class="col-md-6">
+                                <label class="form-label">Description</label>
+                                <textarea autocomplete="off" id="descriptionmodal" name="descriptionmodal" type="text"
+                                    class="form-control text-in" placeholder="Enter New Description" aria-label="fullname"
+                                    aria-describedby="basic-addon1" rows="3"></textarea>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </div>
@@ -66,7 +68,7 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div class="col-md-8">
+        <div class="col-xl-8">
             <div class="card mb-4 cardbody-size-710">
                 <div class="progress progress-sm">
                     <div class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0"
@@ -104,7 +106,7 @@
                     </div>
                 </div>
                 <div class="card-body">
-                    <div class="table-responsive scroll-cardbody-size-710 border">
+                    <div class="table-responsive scroll-cardbody-size-640 border">
                         <table class="table table-bordered custom-mobile-table" id="production-material-datatable"
                             width="100%" cellspacing="10">
                             <thead class="table-header">
@@ -127,7 +129,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-xl-4 mobile-order-first">
             <div class="row">
                 <div class="col-md">
                     <div class="card">
@@ -209,45 +211,10 @@
                                 Material Inventory Details:
                             </span>
                         </div>
-                        <div class="card-body">
+                        <div class="card-body" id="material-details">
                             <div class="row">
-                                <div class="col-md-12">
-                                    <span class="h5 label-title">
-                                        Name:
-                                    </span>
-                                    <span>
-                                        <input autocomplete="off" class="form-control" placeholder="Material Name" readonly>
-                                    </span>
-                                </div>
-                            </div>
-                            <div class="row mt-3">
-                                <div class="col-md-12">
-                                    <span class="h5 label-title">
-                                        Stocks:
-                                    </span>
-                                    <span>
-                                        <input autocomplete="off" class="form-control" placeholder="Current Stocks" readonly>
-                                    </span>
-                                </div>
-                            </div>
-                            <div class="row mt-3">
-                                <div class="col-md-12">
-                                    <span class="h5 label-title">
-                                        Vendor:
-                                    </span>
-                                    <span>
-                                        <input autocomplete="off" class="form-control" placeholder="Vendor Name" readonly>
-                                    </span>
-                                </div>
-                            </div>
-                            <div class="row mt-3">
-                                <div class="col-md-12">
-                                    <span class="h5 label-title">
-                                        Description:
-                                    </span>
-                                    <span>
-                                        <textarea class="form-control mt-1 w-100"  id="adjustment-details" rows="3" readonly>Materials Description</textarea>
-                                    </span>
+                                <div class="col-md-12 text-center">
+                                    Click a Row to display Material Inventory Details.
                                 </div>
                             </div>
                         </div>
