--- a/views/productionmaterials/productionmaterials.ejs
+++ b/views/productionmaterials/productionmaterials.ejs
@@ -29,21 +29,27 @@
                                     class="form-control" placeholder="Enter New Material Name" aria-label="fullname"
                                     aria-describedby="basic-addon1">
                             </div>
-                            <div class="col-md-6 mb-2">
-                                <label class="form-label">Vendor ID</label>
-                                <select class="form-control text-center" name="vendoridmodal" id="vendoridmodal">
-                                    <option value="">-- Select Vendor --</option>
-                                </select>
-                            </div>
-                            
-                        </div>
-                        <div class="row mb-2 justify-content-center">
                             <div class="col-md-6">
                                 <label class="form-label">Price</label>
-                                <input autocomplete="off" id="pricemodal" name="pricemodal" type="text"
-                                    class="form-control" placeholder="Enter New Price" aria-label="fullname"
-                                    aria-describedby="basic-addon1" oninput="formatPrice(event, this)">
+                                <input autocomplete="off" id="pricemodal" name="pricemodal" type="text" class="form-control" placeholder="Enter New Price" aria-label="pricemodal" aria-describedby="basic-addon1" oninput="formatPrice(event, this)">
                             </div>
+                        </div>
+                        
+                        <div class="row mb-2 justify-content-center">
+                            <div class="col-md-6">
+                                <label class="form-label">Unit</label>
+                                <input autocomplete="off" class="form-control text-center custom-input" placeholder="Select Unit" name="unitmodal" id="unitmodal" />
+                                <input autocomplete="off" type="hidden" id="unitmodalID" name="unitmodalID" />
+                                <div class="custom-dropdown cdw-tableoption" id="unitmodalDropdown"></div>
+                            </div>
+                            <div class="col-md-6">
+                                <label class="form-label">Vendor</label>
+                                <input autocomplete="off" class="form-control text-center custom-input" placeholder="Select Vendor" name="vendormodal" id="vendormodal" />
+                                <input autocomplete="off" type="hidden" id="vendormodalID" name="vendormodalID" />
+                                <div class="custom-dropdown cdw-tableoption" id="vendormodalDropdown"></div>
+                            </div>
+                        </div>
+                        <div class="row mb-2 justify-content-center">
                         </div>
                         <div class="row mb-2 justify-content-center">
                             <div class="col-md-6">
@@ -162,21 +168,20 @@
                                 </div>
                             </div>
                             <div class="row mb-1 justify-content-center">
-                                <div class="col-md-6 mb-1">
-                                    <div class="customdropdown">
-                                        <div class="select selectunit">
-                                            <span id="selectedunit">Select Unit</span>
-                                            <i class="fa fa-chevron-left"></i>
+                                <div class="col-md-6">
+                                    <div class="input-group">
+                                        <input autocomplete="off" class="form-control text-center custom-input" placeholder="Select Unit" name="unit" id="unit" />
+                                        <input autocomplete="off" type="hidden" id="unitID" name="unitID" />
+                                        <div class="input-group-append">
+                                            <span class="input-group-text">Unit</span>
                                         </div>
-                                        <input autocomplete="off" type="hidden" name="unitid" id="unitid">
-                                        <ul class="customdropdown-menu unitlist"></ul>
                                     </div>
+                                    <div class="custom-dropdown cdw-tableoption" id="unitDropdown"></div>
                                 </div>
         
                                 <div class="col-md-6">
                                     <div class="input-group">
-                                        <input autocomplete="off" class="form-control text-center custom-input"
-                                            placeholder="Select Vendor" name="vendor" id="vendor" />
+                                        <input autocomplete="off" class="form-control text-center custom-input" placeholder="Select Vendor" name="vendor" id="vendor" />
                                         <input autocomplete="off" type="hidden" id="vendorID" name="vendorID" />
                                         <div class="input-group-append">
                                             <span class="input-group-text">Vendor</span>
