--- a/views/productioncomponents/productioncomponents.ejs
+++ b/views/productioncomponents/productioncomponents.ejs
@@ -118,7 +118,14 @@
                                                         <option value="oz">Ounce</option>
                                                         <option value="g">Gram</option>
                                                         <option value="mg">Milligram</option>
-                                                        <option value="pc">Piece</option>
+                                                        <option value="mcg">Microgram</option>
+                                                        <option value="lb">Pound</option>
+                                                        <option value="mt">Metric Ton</option>
+                                                        <option value="t">Tonne</option>
+                                                        <option value="ml">Milliliter</option>
+                                                        <option value="l">Liter</option>
+                                                        <option value="kl">Kiloliter</option>
+                                                        <option value="gal">Galon</option>
                                                     </select>
                                                 </td>
                                                 <td data-label="Quantity" class="custom-mobile-align" id="quantityInput0"></td>
@@ -188,12 +195,12 @@
                 <table class="table table-bordered custom-mobile-table" id="productioncomponents-datatable" width="100%" cellspacing="10">
                     <thead class="table-header">
                         <tr>
-                            <th>ID</th>
-                            <th>Product Name</th>
-                            <th>Product ID</th>
-                            <th>Components</th>
-                            <th>Created by</th>
-                            <th>Created date</th>
+                            <th class="text-left">ID</th>
+                            <th class="text-left">Product Name</th>
+                            <th class="text-left">Product ID</th>
+                            <th class="text-left">Components</th>
+                            <th class="text-left">Created by</th>
+                            <th class="text-left">Created date</th>
                             <th class="col-1">Status</th>
                             <th class="col-1"></th>               
                         </tr>
