--- a/views/production/production.ejs
+++ b/views/production/production.ejs
@@ -78,7 +78,7 @@
                             <div class="col-12">
                                 <div class="row justify-content-end">
                                     <div class="col-md-3 mb-1">
-                                        <div class="customdropdown">
+                                        <!-- <div class="customdropdown">
                                             <div class="select selectproduct">
                                                 <span id="selectedproduct">Select Product</span>
                                                 <i class="fa fa-chevron-left"></i>
@@ -86,7 +86,15 @@
                                             <input autocomplete="off" type="hidden" name="productid" id="productid">
                                             <ul class="customdropdown-menu productlist">
                                             </ul>
+                                        </div> -->
+                                        <div class="input-group">
+                                            <input autocomplete="off" class="form-control text-center custom-input" placeholder="Select Product" name="product" id="product" />
+                                            <input autocomplete="off" type="hidden" id="productID" name="productID" />
+                                             <div class="input-group-append">
+                                                <span class="input-group-text">Product</span>
+                                            </div>
                                         </div>
+                                        <div class="custom-dropdown cdw-tableoption" id="productDropdown"></div>
                                     </div>
                                     
                                     <div class="col-md-3">
